next block pt 2

--- a/Index.html
+++ b/Index.html
@@ -78,7 +78,7 @@
             </form>
         </div>
         <div class="stat">
-            <div class="stat_head">
+            <div class="stat__head">
                 <div class="numbers stat_first">
                     <span>17</span>
                     <p>Large stores migrated in 2019</p>
