--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                     <ul>
                     <li>Optimization</li>
                     <li><a>Services<img src="img/_src/Path.png"></a>
-                        <div class="header__underline"><img src="img/_src/Bottom_line.svg"></div>
+                    <div class="header__underline"><img src="img/_src/Bottom_line.svg"></div>
                         <div class="header__services-menu">
                         <ul>
                             <li><a><img src="img/_src/stakeholder.svg">Magento Developement Services</a></li>
@@ -81,24 +81,24 @@
             <div class="stat__head">
                 <div class="numbers stat_first">
                     <span>17</span>
-                    <p>Large stores migrated in 2019</p>
+                    <p>Large stores migrated<br> in 2019</p>
                 </div>
                 <div class="numbers stat_second">
                     <span>31</span>
-                    <p>Certified Magento 2 experts </p>
+                    <p>Certified Magento 2<br> experts </p>
                 </div>
                 <div class="numbers stat_third">
                     <span>11</span>
-                    <p>Years in Magento development</p>
+                    <p>Years in Magento<br> development</p>
                 </div>
                 <div class="numbers stat_fourth">
                     <span>0%</span>
-                    <p>Downtime or profit loss</p>
+                    <p>Downtime or profit<br> loss</p>
                 </div>
             </div>
-            <div class="numbers stat-content">
+            <div class="stat__content">
                 <div class="text">
-                    <p>If you continue running your store on an older version of Magento (1.x), you will eventually be stranded without proper support. Moreover, weak customer data security can result in huge fines from payment processors</p>
+                    <p>If you continue running your store on an older version of Magento (1.x), you will eventually be stranded without proper support. Moreover, weak customer data security can result in huge fines from payment processors.</p>
                 </div>
                 <div class="images">
 
