--- a/Index.html
+++ b/Index.html
@@ -97,15 +97,34 @@
                 </div>
             </div>
             <div class="stat__content">
-                <div class="text">
+                <div class="text left">
                     <p>If you continue running your store on an older version of Magento (1.x), you will eventually be stranded without proper support. Moreover, weak customer data security can result in huge fines from payment processors.</p>
                 </div>
-                <div class="images">
-
-                </div>
+                    <div class="polygon-illustration">   
+                        <img src="img/_src/Illustration.svg" >
+                    </div>
+                    <div class="browser-illusrtation">
+                        <img src="img/_src/Web Browser.svg" alt="">
+                    </div>
+                    <div class="text right">
+                        <p> The solution is to upgrade to Magento 2 as soon as possible. We offer Magento Migration and upgrade services to transfer your store to the latest, most secure, and versatile Magento 2 platform</p>
+                         <input class="send" type="submit" name="send" value="lets get started!">
+                    </div>
+                    
+                <!-- </div>
+                <div class="browser">
+                    <img src="img/_src/Web Browser.svg" alt="Browser illustration">
+                </div> -->
             </div>
         </div>
-        
+        <div class="reasons">
+            <div class="reasons__head">
+                <h2>Why migrate to Magento 2 with Onilab?</h2>
+                <p>Using our help to migrate to Magento 2 is a great long-term business decision. We are:</p>
+            </div>
+            <div class="reasons__content"></div>
+            <div class="reasons__footer"></div>
+        </div>
     </div>
     <script src="js/scripts.min.js"></script>
 </body>
