--- a/Index.html
+++ b/Index.html
@@ -25,17 +25,71 @@
                     <div class="header__underline"><img src="img/_src/Bottom_line.svg"></div>
                         <div class="header__services-menu">
                         <ul>
-                            <li><a>
-                                <svg id="Layer_5" enable-background="new 0 0 64 64" height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg">
+                            <li>
+                                <a>
+                                    <svg id="Layer_5" enable-background="new 0 0 64 64" height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg">
                                     <path d="m51 39c-6.279 0-11.438 4.851-11.949 11h-8.051v-2.792l-2.635-.62c-.333-1.16-.795-2.276-1.381-3.332l1.425-2.302-1.974-1.974 16.825-16.825c2.091 1.771 4.791 2.845 7.74 2.845 6.617 0 12-5.383 12-12s-5.383-12-12-12-12 5.383-12 12c0 2.949 1.074 5.649 2.845 7.741l-16.824 16.824-1.974-1.974-2.302 1.425c-1.056-.586-2.172-1.049-3.332-1.382l-.621-2.634h-2.792v-8.051c6.149-.511 11-5.67 11-11.949 0-6.617-5.383-12-12-12s-12 5.383-12 12c0 6.279 4.851 11.438 11 11.949v8.051h-2.792l-.62 2.634c-1.174.337-2.304.807-3.373 1.404l-1.967-1.038h-2.248v27h27v-2.248l-1.039-1.968c.597-1.068 1.067-2.198 1.404-3.373l2.635-.619v-2.792h8.051c.511 6.149 5.67 11 11.949 11 6.617 0 12-5.383 12-12s-5.383-12-12-12zm-5.999-18.018c.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018s-4.326-.757-5.999-2.018zm2.999-10.982c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm3-7c5.514 0 10 4.486 10 10 0 2.361-.827 4.53-2.201 6.243-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243 0-5.514 4.486-10 10-10zm-41 7c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm3 13c-2.252 0-4.326-.757-5.999-2.018.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018zm-10-10c0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.361-.827 4.53-2.201 6.243-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243zm0 48v-10c0-5.514 4.486-10 10-10s10 4.486 10 10-4.486 10-10 10zm26-7.792-2.272.535-.146.595c-.337 1.376-.882 2.689-1.619 3.904l-.294.484 1.2 2.273h-6.25c3.239-2.15 5.381-5.828 5.381-9.999 0-6.617-5.383-12-12-12-4.171 0-7.849 2.142-10 5.381v-6.25l2.273 1.2.484-.294c1.214-.737 2.528-1.281 3.904-1.619l.595-.146.536-2.272h4.416l.535 2.272.595.146c1.376.337 2.689.882 3.904 1.619l.524.318 1.986-1.229 3.123 3.123-1.229 1.986.318.524c.736 1.213 1.281 2.527 1.619 3.904l.146.595 2.271.534zm16.001 5.774c.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018s-4.326-.757-5.999-2.018zm2.999-10.982c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm10.799 9.243c-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243 0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.361-.827 4.53-2.201 6.243z"/><path d="m8 56h2v2h-2z"/><path d="m12 56h2v2h-2z"/><path d="m16 56h2v2h-2z"/><path d="m8 52h10v2h-10z"/><path d="m8 48h10v2h-10z"/>
                                     <path d="m8 44h10v2h-10z"/>
-                                </svg>
-                                Magento Developement Services
+                                    </svg>
+                                    Magento Developement Services
+                                </a>
+                        </li>
+                            <li>
+                                <a>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 64 64"><defs><style></style></defs><title>Coding, custom, development, seo, web</title><g id="_2" data-name="2"><path class="cls-1" d="M52,57H12a5.006,5.006,0,0,1-5-5V50a1,1,0,0,1,1-1H56a1,1,0,0,1,1,1v2A5.006,5.006,0,0,1,52,57ZM9,51v1a3,3,0,0,0,3,3H52a3,3,0,0,0,3-3V51Z"/><path class="cls-1" d="M36,54H28a1,1,0,0,1-1-1V50a1,1,0,0,1,2,0v2h6V50a1,1,0,0,1,2,0v3A1,1,0,0,1,36,54Z"/><path class="cls-1" d="M54,51H10a1,1,0,0,1-1-1V16a1,1,0,0,1,1-1h8a1,1,0,0,1,0,2H11V49H53V17H50a1,1,0,0,1,0-2h4a1,1,0,0,1,1,1V50A1,1,0,0,1,54,51Z"/><path class="cls-1" d="M46,44H18a1,1,0,0,1-1-1V8a1,1,0,0,1,1-1H46a1,1,0,0,1,1,1V43A1,1,0,0,1,46,44ZM19,42H45V9H19Z"/><path class="cls-1" d="M27,24a1,1,0,0,1-.707-.293l-4-4a1,1,0,0,1,0-1.414l4-4a1,1,0,0,1,1.414,1.414L24.414,19l3.293,3.293A1,1,0,0,1,27,24Z"/><path class="cls-1" d="M37,24a1,1,0,0,1-.707-1.707L39.586,19l-3.293-3.293a1,1,0,0,1,1.414-1.414l4,4a1,1,0,0,1,0,1.414l-4,4A1,1,0,0,1,37,24Z"/><path class="cls-1" d="M30,24a1,1,0,0,1-.894-1.447l4-8a1,1,0,1,1,1.79.894l-4,8A1,1,0,0,1,30,24Z"/><path class="cls-1" d="M37,29H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,34H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,39H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/></g></svg>
+                                Hire Magento Developers
                             </a>
                         </li>
-                            <li><a><embed src="img/_src/2100679991579330134.svg" type="image/svg+xml">Hire Magento Developers</a></li>
-                            <li><a><embed src="img/_src/migrate.svg" type="image/svg+xml">Magento 2 Migration</a></li>
-                            <li><a><embed src="img/_src/speed.svg" type="image/svg+xml">Magento Perfomance Optimization</a></li>
+                            <li>
+                                <a>
+                                    <svg height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg"><g id="migrating"><path d="m56 54h2a4 4 0 0 0 -4-4v2a2 2 0 0 1 2 2z"/><path d="m21 27h2v2h-2z"/><path d="m21 33h2v2h-2z"/><path d="m21 39h2v2h-2z"/><path d="m62 34v-4a1 1 0 0 0 -.757-.97l-1.292-.323.685-1.142a1 1 0 0 0 -.151-1.222l-2.828-2.828a1 1 0 0 0 -1.222-.151l-1.142.685-.323-1.292a1 1 0 0 0 -.97-.757h-4a1 1 0 0 0 -.97.757l-.323 1.292-.752-.451c.019-.2.045-.4.045-.6a6.009 6.009 0 0 0 -5.4-5.97 3.53 3.53 0 0 0 .4-1.528 8.492 8.492 0 0 0 -14.331-6.174 11 11 0 1 0 -20.461 7.674h-.208a6 6 0 0 0 0 12h4v6.471a10.955 10.955 0 0 0 -2.576 10.55 8 8 0 0 0 .576 15.979h44a8 8 0 0 0 0-16h-.887a13.837 13.837 0 0 0 1.611-4.33.978.978 0 0 0 .246-.427l.323-1.292 1.142.685a1 1 0 0 0 1.222-.151l2.828-2.828a1 1 0 0 0 .151-1.222l-.685-1.142 1.292-.323a1 1 0 0 0 .757-.97zm-58-11a4 4 0 0 1 4-4h2.01a1 1 0 0 0 .8-1.6 8.994 8.994 0 1 1 16.18-5.589 1 1 0 0 0 1.868.474 6.494 6.494 0 0 1 12.142 3.215 3.065 3.065 0 0 1 -.466 1.171 7.117 7.117 0 0 0 -.475.991 1 1 0 0 0 .941 1.338h1a4 4 0 0 1 4 4 3.944 3.944 0 0 1 -.135.993l-1.444 1.444a13.838 13.838 0 0 0 -10.86 1.714 13.607 13.607 0 0 0 -1.561 1.149v-3.3h3a1 1 0 0 0 1-1v-9h-2v8h-2v-1c0-2.558-4.493-3.819-9-3.981v-6.019a1 1 0 0 0 -1-1h-2.142a4 4 0 1 0 0 2h1.142v5.019c-4.507.162-9 1.423-9 3.981v5h-4a4 4 0 0 1 -4-4zm18 19c-5.25 0-8-1.486-8-2v-3.476a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2zm0-22c5.25 0 8 1.486 8 2s-2.75 2-8 2-8-1.486-8-2 2.75-2 8-2zm-8 4.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm4-12.524a2 2 0 1 1 -2-2 2 2 0 0 1 2 2zm-4 18.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm40 17.476a6 6 0 0 1 0 12h-44a6 6 0 0 1 0-12h.84a1 1 0 0 0 .915-1.4 8.953 8.953 0 0 1 .245-7.712v1.112c0 1.325 1.212 2.3 3 2.956v13.044h-3v2h4a1 1 0 0 0 1-1v-13.484a24.087 24.087 0 0 0 4 .465v10.019a1 1 0 0 0 1 1h9.142a4 4 0 1 0 0-2h-8.142v-9.019c4.507-.162 9-1.423 9-3.981v-2h4v9a1 1 0 0 0 1 1h5v-2h-4v-9a1 1 0 0 0 -1-1h-5v-4.908a11.855 11.855 0 0 1 2.626-2.248 12.06 12.06 0 0 1 8.615-1.628.979.979 0 0 0 .123.349l.685 1.142-1.292.323a1 1 0 0 0 -.757.97v4a1 1 0 0 0 .757.97l1.292.323-.685 1.142a1 1 0 0 0 .151 1.222l2.828 2.828a1 1 0 0 0 1.222.151l1.142-.685.323 1.292a1 1 0 0 0 .97.757h2.6a11.951 11.951 0 0 1 -2.155 4.383 1 1 0 0 0 .785 1.617zm-21 6a2 2 0 1 1 2 2 2 2 0 0 1 -2-2zm27-20.781-1.844.461a1 1 0 0 0 -.615 1.485l.978 1.63-1.719 1.724-1.63-.978a1 1 0 0 0 -1.485.615l-.466 1.844h-2.438l-.461-1.844a1 1 0 0 0 -1.485-.615l-1.63.978-1.724-1.719.978-1.63a1 1 0 0 0 -.615-1.485l-1.844-.466v-2.438l1.844-.461a1 1 0 0 0 .615-1.485l-.978-1.63 1.724-1.724 1.63.978a1 1 0 0 0 1.485-.615l.461-1.844h2.438l.461 1.844a1 1 0 0 0 1.485.615l1.63-.978 1.724 1.724-.978 1.63a1 1 0 0 0 .615 1.485l1.844.461z"/><path d="m52 28a4 4 0 1 0 4 4 4 4 0 0 0 -4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1 -2 2z"/><path d="m34 11h2v2h-2z"/><path d="m44 46h2v2h-2z"/><path d="m8 56h2v2h-2z"/></g></svg>
+                                    Magento 2 Migration
+                            </a>
+                        </li>
+                            <li>
+                                <a>
+                                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px " height="28" width="28" 
+                                        	 viewBox="0 0 480.131 480.131" style="enable-background:new 0 0 480.131 480.131;" xml:space="preserve">
+                                        <g>
+                                        	<g>
+                                        		<path d="M440.051,176.007c-0.04-30.911-25.089-55.96-56-56h-11.152c15.945-26.449,7.429-60.817-19.021-76.761
+                                        			c-12.698-7.655-27.915-9.953-42.307-6.391c-28.158-39.499-83.004-48.694-122.504-20.536c-7.938,5.658-14.878,12.599-20.536,20.536
+                                        			c-29.979-7.421-60.298,10.866-67.719,40.845c-3.563,14.392-1.264,29.61,6.391,42.307H96.051
+                                        			c-30.928,0.016-55.987,25.101-55.971,56.029c0.011,20.816,11.566,39.908,30.003,49.571
+                                        			c-38.923,93.871,5.621,201.521,99.492,240.444s201.521-5.621,240.444-99.492c18.709-45.122,18.709-95.831,0-140.952
+                                        			C428.488,215.959,440.062,196.844,440.051,176.007z M240.051,464.007c-92.784,0-168-75.216-168-168s75.216-168,168-168
+                                        			s168,75.216,168,168C407.945,388.747,332.791,463.901,240.051,464.007z M403.195,211.079L403.195,211.079
+                                        			c-46.83-90.102-157.836-125.18-247.938-78.35c-33.552,17.439-60.911,44.798-78.35,78.35
+                                        			c-19.37-10.623-26.461-34.936-15.838-54.306c7.007-12.778,20.409-20.733,34.982-20.766h28.08c4.418-0.001,7.999-3.583,7.998-8.002
+                                        			c0-2.117-0.84-4.147-2.334-5.646l-2.88-2.88c-15.638-15.567-15.695-40.863-0.128-56.5c11.072-11.123,27.631-14.733,42.328-9.227
+                                        			c3.578,1.33,7.598-0.053,9.6-3.304c20.666-33.879,64.884-44.591,98.763-23.925c9.766,5.957,17.968,14.159,23.925,23.925
+                                        			c2.002,3.251,6.022,4.634,9.6,3.304c20.663-7.74,43.688,2.737,51.427,23.399c5.505,14.697,1.895,31.256-9.227,42.328l-2.88,2.88
+                                        			c-3.119,3.129-3.111,8.194,0.018,11.314c1.495,1.491,3.519,2.33,5.63,2.334h28.08c22.091,0.05,39.96,17.999,39.91,40.09
+                                        			C423.928,190.67,415.973,204.072,403.195,211.079z"/>
+                                        	</g>
+                                        </g>
+                                        <g>
+                                        	<g>
+                                        		<path d="M240.051,136.007c-88.366,0-160,71.634-160,160s71.634,160,160,160s160-71.634,160-160
+                                        			C399.95,207.684,328.375,136.108,240.051,136.007z M240.051,440.007c-76.338-0.126-139.323-59.781-143.592-136h23.592v-16H96.459
+                                        			c1.782-32.578,14.635-63.571,36.432-87.848l16.656,16.648l11.304-11.304l-16.656-16.656
+                                        			c24.279-21.799,55.275-34.652,87.856-36.432v23.592h16v-23.592c32.578,1.782,63.571,14.635,87.848,36.432l-16.648,16.656
+                                        			l11.304,11.304l16.696-16.648c21.783,24.283,34.621,55.275,36.392,87.848h-23.592v16h23.592
+                                        			C379.374,380.226,316.389,439.881,240.051,440.007z"/>
+                                        	</g>
+                                        </g>
+                                        <g>
+                                        	<g>
+                                        		<path d="M240.051,184.007c-61.828,0.066-111.934,50.172-112,112h16c0.005-16.794,4.445-33.289,12.872-47.816l55.664,55.664
+                                        			c-2.941,4.876-4.508,10.458-4.536,16.152c0,17.673,14.327,32,32,32c17.673,0,32-14.327,32-32c0-17.673-14.327-32-32-32
+                                        			c-5.695,0.028-11.276,1.595-16.152,4.536l-57.744-57.744c33.783-40.834,94.272-46.549,135.106-12.766
+                                        			c22.045,18.238,34.801,45.363,34.79,73.974h16C351.985,234.179,301.88,184.073,240.051,184.007z M240.051,304.007
+                                        			c8.837,0,16,7.163,16,16s-7.163,16-16,16s-16-7.163-16-16S231.215,304.007,240.051,304.007z"/>
+                                        	</g>
+                                        
+                                    </svg>
+
+                                    Magento Perfomance Optimization</a></li>
                         </ul>
                     </div>
                     </li>
@@ -117,11 +171,6 @@
                         <p> The solution is to upgrade to Magento 2 as soon as possible. We offer Magento Migration and upgrade services to transfer your store to the latest, most secure, and versatile Magento 2 platform</p>
                          <input class="send" type="submit" name="send" value="lets get started!">
                     </div>
-                    
-                <!-- </div>
-                <div class="browser">
-                    <img src="img/_src/Web Browser.svg" alt="Browser illustration">
-                </div> -->
             </div>
         </div>
         <div class="reasons">
@@ -147,7 +196,13 @@
                             <br>
                             <p>Founder and CEO, PG-active. USA</p>
                         </div>
-                        <div class="linkedin"><a href="https://www.linkedin.com/in/allisondorst/">in</a></div>
+                        <div class="linkedin">
+                            <a href="https://www.linkedin.com/in/allisondorst/">
+                                <svg width="32" height="31" viewBox="0 0 32 31" fill="black" xmlns="http://www.w3.org/2000/svg">
+                                    <path id="Shape Copy 2" fill-rule="evenodd" clip-rule="evenodd" d="M25.1236 31V18.1728C24.9221 16.3731 23.4549 15.003 21.6889 14.9655C20.0106 15.1449 18.5761 16.2835 17.9858 17.9048V31H11.1058V10.1556H17.9823V13.0948C17.9823 13.0948 19.2498 9.62132 24.3307 9.62132C26.3015 9.44775 28.253 10.1295 29.7107 11.5009C31.1684 12.8722 31.9988 14.8075 32.0001 16.8363V31H25.1236ZM3.968 7.4789C1.86802 7.56641 0.0942001 5.89628 0 3.74288C0.0923118 1.58877 1.8656 -0.0832332 3.96622 0.00320602C6.06751 -0.0832167 7.84108 1.58987 7.93244 3.7447C7.83729 5.89664 6.06485 7.56539 3.96622 7.4789H3.968ZM7.40444 31H0.533325V10.1555H7.40977V31H7.40444Z" />
+                                    </svg>                                    
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/_src/Review foto.svg">
