2nd block final

--- a/Index.html
+++ b/Index.html
@@ -25,30 +25,30 @@
                     <div class="header__underline"><img src="img/_src/Bottom_line.svg"></div>
                         <div class="header__services-menu">
                         <ul>
-                            <li>
-                                <a>
-                                    <svg id="Layer_5" enable-background="new 0 0 64 64" height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg">
+                        <li>
+                            <a>
+                                <svg id="Layer_5" enable-background="new 0 0 64 64" height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg">
                                     <path d="m51 39c-6.279 0-11.438 4.851-11.949 11h-8.051v-2.792l-2.635-.62c-.333-1.16-.795-2.276-1.381-3.332l1.425-2.302-1.974-1.974 16.825-16.825c2.091 1.771 4.791 2.845 7.74 2.845 6.617 0 12-5.383 12-12s-5.383-12-12-12-12 5.383-12 12c0 2.949 1.074 5.649 2.845 7.741l-16.824 16.824-1.974-1.974-2.302 1.425c-1.056-.586-2.172-1.049-3.332-1.382l-.621-2.634h-2.792v-8.051c6.149-.511 11-5.67 11-11.949 0-6.617-5.383-12-12-12s-12 5.383-12 12c0 6.279 4.851 11.438 11 11.949v8.051h-2.792l-.62 2.634c-1.174.337-2.304.807-3.373 1.404l-1.967-1.038h-2.248v27h27v-2.248l-1.039-1.968c.597-1.068 1.067-2.198 1.404-3.373l2.635-.619v-2.792h8.051c.511 6.149 5.67 11 11.949 11 6.617 0 12-5.383 12-12s-5.383-12-12-12zm-5.999-18.018c.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018s-4.326-.757-5.999-2.018zm2.999-10.982c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm3-7c5.514 0 10 4.486 10 10 0 2.361-.827 4.53-2.201 6.243-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243 0-5.514 4.486-10 10-10zm-41 7c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm3 13c-2.252 0-4.326-.757-5.999-2.018.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018zm-10-10c0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.361-.827 4.53-2.201 6.243-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243zm0 48v-10c0-5.514 4.486-10 10-10s10 4.486 10 10-4.486 10-10 10zm26-7.792-2.272.535-.146.595c-.337 1.376-.882 2.689-1.619 3.904l-.294.484 1.2 2.273h-6.25c3.239-2.15 5.381-5.828 5.381-9.999 0-6.617-5.383-12-12-12-4.171 0-7.849 2.142-10 5.381v-6.25l2.273 1.2.484-.294c1.214-.737 2.528-1.281 3.904-1.619l.595-.146.536-2.272h4.416l.535 2.272.595.146c1.376.337 2.689.882 3.904 1.619l.524.318 1.986-1.229 3.123 3.123-1.229 1.986.318.524c.736 1.213 1.281 2.527 1.619 3.904l.146.595 2.271.534zm16.001 5.774c.01-3.3 2.697-5.982 5.999-5.982s5.989 2.682 5.999 5.982c-1.673 1.261-3.747 2.018-5.999 2.018s-4.326-.757-5.999-2.018zm2.999-10.982c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3zm10.799 9.243c-.555-2.463-2.247-4.495-4.495-5.52 1.032-.917 1.696-2.238 1.696-3.723 0-2.757-2.243-5-5-5s-5 2.243-5 5c0 1.485.664 2.806 1.695 3.723-2.248 1.025-3.94 3.057-4.495 5.52-1.373-1.713-2.2-3.882-2.2-6.243 0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.361-.827 4.53-2.201 6.243z"/><path d="m8 56h2v2h-2z"/><path d="m12 56h2v2h-2z"/><path d="m16 56h2v2h-2z"/><path d="m8 52h10v2h-10z"/><path d="m8 48h10v2h-10z"/>
                                     <path d="m8 44h10v2h-10z"/>
-                                    </svg>
-                                    Magento Developement Services
-                                </a>
+                                </svg>
+                                Magento Developement Services
+                            </a>
                         </li>
-                            <li>
-                                <a>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 64 64"><defs><style></style></defs><title>Coding, custom, development, seo, web</title><g id="_2" data-name="2"><path class="cls-1" d="M52,57H12a5.006,5.006,0,0,1-5-5V50a1,1,0,0,1,1-1H56a1,1,0,0,1,1,1v2A5.006,5.006,0,0,1,52,57ZM9,51v1a3,3,0,0,0,3,3H52a3,3,0,0,0,3-3V51Z"/><path class="cls-1" d="M36,54H28a1,1,0,0,1-1-1V50a1,1,0,0,1,2,0v2h6V50a1,1,0,0,1,2,0v3A1,1,0,0,1,36,54Z"/><path class="cls-1" d="M54,51H10a1,1,0,0,1-1-1V16a1,1,0,0,1,1-1h8a1,1,0,0,1,0,2H11V49H53V17H50a1,1,0,0,1,0-2h4a1,1,0,0,1,1,1V50A1,1,0,0,1,54,51Z"/><path class="cls-1" d="M46,44H18a1,1,0,0,1-1-1V8a1,1,0,0,1,1-1H46a1,1,0,0,1,1,1V43A1,1,0,0,1,46,44ZM19,42H45V9H19Z"/><path class="cls-1" d="M27,24a1,1,0,0,1-.707-.293l-4-4a1,1,0,0,1,0-1.414l4-4a1,1,0,0,1,1.414,1.414L24.414,19l3.293,3.293A1,1,0,0,1,27,24Z"/><path class="cls-1" d="M37,24a1,1,0,0,1-.707-1.707L39.586,19l-3.293-3.293a1,1,0,0,1,1.414-1.414l4,4a1,1,0,0,1,0,1.414l-4,4A1,1,0,0,1,37,24Z"/><path class="cls-1" d="M30,24a1,1,0,0,1-.894-1.447l4-8a1,1,0,1,1,1.79.894l-4,8A1,1,0,0,1,30,24Z"/><path class="cls-1" d="M37,29H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,34H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,39H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/></g></svg>
+                        <li>
+                            <a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 64 64"><defs><style></style></defs><title>Coding, custom, development, seo, web</title><g id="_2" data-name="2"><path class="cls-1" d="M52,57H12a5.006,5.006,0,0,1-5-5V50a1,1,0,0,1,1-1H56a1,1,0,0,1,1,1v2A5.006,5.006,0,0,1,52,57ZM9,51v1a3,3,0,0,0,3,3H52a3,3,0,0,0,3-3V51Z"/><path class="cls-1" d="M36,54H28a1,1,0,0,1-1-1V50a1,1,0,0,1,2,0v2h6V50a1,1,0,0,1,2,0v3A1,1,0,0,1,36,54Z"/><path class="cls-1" d="M54,51H10a1,1,0,0,1-1-1V16a1,1,0,0,1,1-1h8a1,1,0,0,1,0,2H11V49H53V17H50a1,1,0,0,1,0-2h4a1,1,0,0,1,1,1V50A1,1,0,0,1,54,51Z"/><path class="cls-1" d="M46,44H18a1,1,0,0,1-1-1V8a1,1,0,0,1,1-1H46a1,1,0,0,1,1,1V43A1,1,0,0,1,46,44ZM19,42H45V9H19Z"/><path class="cls-1" d="M27,24a1,1,0,0,1-.707-.293l-4-4a1,1,0,0,1,0-1.414l4-4a1,1,0,0,1,1.414,1.414L24.414,19l3.293,3.293A1,1,0,0,1,27,24Z"/><path class="cls-1" d="M37,24a1,1,0,0,1-.707-1.707L39.586,19l-3.293-3.293a1,1,0,0,1,1.414-1.414l4,4a1,1,0,0,1,0,1.414l-4,4A1,1,0,0,1,37,24Z"/><path class="cls-1" d="M30,24a1,1,0,0,1-.894-1.447l4-8a1,1,0,1,1,1.79.894l-4,8A1,1,0,0,1,30,24Z"/><path class="cls-1" d="M37,29H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,34H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/><path class="cls-1" d="M37,39H27a1,1,0,0,1,0-2H37a1,1,0,0,1,0,2Z"/></g></svg>
                                 Hire Magento Developers
                             </a>
                         </li>
-                            <li>
-                                <a>
-                                    <svg height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg"><g id="migrating"><path d="m56 54h2a4 4 0 0 0 -4-4v2a2 2 0 0 1 2 2z"/><path d="m21 27h2v2h-2z"/><path d="m21 33h2v2h-2z"/><path d="m21 39h2v2h-2z"/><path d="m62 34v-4a1 1 0 0 0 -.757-.97l-1.292-.323.685-1.142a1 1 0 0 0 -.151-1.222l-2.828-2.828a1 1 0 0 0 -1.222-.151l-1.142.685-.323-1.292a1 1 0 0 0 -.97-.757h-4a1 1 0 0 0 -.97.757l-.323 1.292-.752-.451c.019-.2.045-.4.045-.6a6.009 6.009 0 0 0 -5.4-5.97 3.53 3.53 0 0 0 .4-1.528 8.492 8.492 0 0 0 -14.331-6.174 11 11 0 1 0 -20.461 7.674h-.208a6 6 0 0 0 0 12h4v6.471a10.955 10.955 0 0 0 -2.576 10.55 8 8 0 0 0 .576 15.979h44a8 8 0 0 0 0-16h-.887a13.837 13.837 0 0 0 1.611-4.33.978.978 0 0 0 .246-.427l.323-1.292 1.142.685a1 1 0 0 0 1.222-.151l2.828-2.828a1 1 0 0 0 .151-1.222l-.685-1.142 1.292-.323a1 1 0 0 0 .757-.97zm-58-11a4 4 0 0 1 4-4h2.01a1 1 0 0 0 .8-1.6 8.994 8.994 0 1 1 16.18-5.589 1 1 0 0 0 1.868.474 6.494 6.494 0 0 1 12.142 3.215 3.065 3.065 0 0 1 -.466 1.171 7.117 7.117 0 0 0 -.475.991 1 1 0 0 0 .941 1.338h1a4 4 0 0 1 4 4 3.944 3.944 0 0 1 -.135.993l-1.444 1.444a13.838 13.838 0 0 0 -10.86 1.714 13.607 13.607 0 0 0 -1.561 1.149v-3.3h3a1 1 0 0 0 1-1v-9h-2v8h-2v-1c0-2.558-4.493-3.819-9-3.981v-6.019a1 1 0 0 0 -1-1h-2.142a4 4 0 1 0 0 2h1.142v5.019c-4.507.162-9 1.423-9 3.981v5h-4a4 4 0 0 1 -4-4zm18 19c-5.25 0-8-1.486-8-2v-3.476a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2zm0-22c5.25 0 8 1.486 8 2s-2.75 2-8 2-8-1.486-8-2 2.75-2 8-2zm-8 4.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm4-12.524a2 2 0 1 1 -2-2 2 2 0 0 1 2 2zm-4 18.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm40 17.476a6 6 0 0 1 0 12h-44a6 6 0 0 1 0-12h.84a1 1 0 0 0 .915-1.4 8.953 8.953 0 0 1 .245-7.712v1.112c0 1.325 1.212 2.3 3 2.956v13.044h-3v2h4a1 1 0 0 0 1-1v-13.484a24.087 24.087 0 0 0 4 .465v10.019a1 1 0 0 0 1 1h9.142a4 4 0 1 0 0-2h-8.142v-9.019c4.507-.162 9-1.423 9-3.981v-2h4v9a1 1 0 0 0 1 1h5v-2h-4v-9a1 1 0 0 0 -1-1h-5v-4.908a11.855 11.855 0 0 1 2.626-2.248 12.06 12.06 0 0 1 8.615-1.628.979.979 0 0 0 .123.349l.685 1.142-1.292.323a1 1 0 0 0 -.757.97v4a1 1 0 0 0 .757.97l1.292.323-.685 1.142a1 1 0 0 0 .151 1.222l2.828 2.828a1 1 0 0 0 1.222.151l1.142-.685.323 1.292a1 1 0 0 0 .97.757h2.6a11.951 11.951 0 0 1 -2.155 4.383 1 1 0 0 0 .785 1.617zm-21 6a2 2 0 1 1 2 2 2 2 0 0 1 -2-2zm27-20.781-1.844.461a1 1 0 0 0 -.615 1.485l.978 1.63-1.719 1.724-1.63-.978a1 1 0 0 0 -1.485.615l-.466 1.844h-2.438l-.461-1.844a1 1 0 0 0 -1.485-.615l-1.63.978-1.724-1.719.978-1.63a1 1 0 0 0 -.615-1.485l-1.844-.466v-2.438l1.844-.461a1 1 0 0 0 .615-1.485l-.978-1.63 1.724-1.724 1.63.978a1 1 0 0 0 1.485-.615l.461-1.844h2.438l.461 1.844a1 1 0 0 0 1.485.615l1.63-.978 1.724 1.724-.978 1.63a1 1 0 0 0 .615 1.485l1.844.461z"/><path d="m52 28a4 4 0 1 0 4 4 4 4 0 0 0 -4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1 -2 2z"/><path d="m34 11h2v2h-2z"/><path d="m44 46h2v2h-2z"/><path d="m8 56h2v2h-2z"/></g></svg>
-                                    Magento 2 Migration
-                            </a>
+                        <li>
+                             <a>
+                                 <svg height="28" viewBox="0 0 64 64" width="28" xmlns="http://www.w3.org/2000/svg"><g id="migrating"><path d="m56 54h2a4 4 0 0 0 -4-4v2a2 2 0 0 1 2 2z"/><path d="m21 27h2v2h-2z"/><path d="m21 33h2v2h-2z"/><path d="m21 39h2v2h-2z"/><path d="m62 34v-4a1 1 0 0 0 -.757-.97l-1.292-.323.685-1.142a1 1 0 0 0 -.151-1.222l-2.828-2.828a1 1 0 0 0 -1.222-.151l-1.142.685-.323-1.292a1 1 0 0 0 -.97-.757h-4a1 1 0 0 0 -.97.757l-.323 1.292-.752-.451c.019-.2.045-.4.045-.6a6.009 6.009 0 0 0 -5.4-5.97 3.53 3.53 0 0 0 .4-1.528 8.492 8.492 0 0 0 -14.331-6.174 11 11 0 1 0 -20.461 7.674h-.208a6 6 0 0 0 0 12h4v6.471a10.955 10.955 0 0 0 -2.576 10.55 8 8 0 0 0 .576 15.979h44a8 8 0 0 0 0-16h-.887a13.837 13.837 0 0 0 1.611-4.33.978.978 0 0 0 .246-.427l.323-1.292 1.142.685a1 1 0 0 0 1.222-.151l2.828-2.828a1 1 0 0 0 .151-1.222l-.685-1.142 1.292-.323a1 1 0 0 0 .757-.97zm-58-11a4 4 0 0 1 4-4h2.01a1 1 0 0 0 .8-1.6 8.994 8.994 0 1 1 16.18-5.589 1 1 0 0 0 1.868.474 6.494 6.494 0 0 1 12.142 3.215 3.065 3.065 0 0 1 -.466 1.171 7.117 7.117 0 0 0 -.475.991 1 1 0 0 0 .941 1.338h1a4 4 0 0 1 4 4 3.944 3.944 0 0 1 -.135.993l-1.444 1.444a13.838 13.838 0 0 0 -10.86 1.714 13.607 13.607 0 0 0 -1.561 1.149v-3.3h3a1 1 0 0 0 1-1v-9h-2v8h-2v-1c0-2.558-4.493-3.819-9-3.981v-6.019a1 1 0 0 0 -1-1h-2.142a4 4 0 1 0 0 2h1.142v5.019c-4.507.162-9 1.423-9 3.981v5h-4a4 4 0 0 1 -4-4zm18 19c-5.25 0-8-1.486-8-2v-3.476a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2zm0-22c5.25 0 8 1.486 8 2s-2.75 2-8 2-8-1.486-8-2 2.75-2 8-2zm-8 4.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm4-12.524a2 2 0 1 1 -2-2 2 2 0 0 1 2 2zm-4 18.524a19.008 19.008 0 0 0 8 1.476 19.008 19.008 0 0 0 8-1.476v3.476c0 .514-2.75 2-8 2s-8-1.486-8-2zm40 17.476a6 6 0 0 1 0 12h-44a6 6 0 0 1 0-12h.84a1 1 0 0 0 .915-1.4 8.953 8.953 0 0 1 .245-7.712v1.112c0 1.325 1.212 2.3 3 2.956v13.044h-3v2h4a1 1 0 0 0 1-1v-13.484a24.087 24.087 0 0 0 4 .465v10.019a1 1 0 0 0 1 1h9.142a4 4 0 1 0 0-2h-8.142v-9.019c4.507-.162 9-1.423 9-3.981v-2h4v9a1 1 0 0 0 1 1h5v-2h-4v-9a1 1 0 0 0 -1-1h-5v-4.908a11.855 11.855 0 0 1 2.626-2.248 12.06 12.06 0 0 1 8.615-1.628.979.979 0 0 0 .123.349l.685 1.142-1.292.323a1 1 0 0 0 -.757.97v4a1 1 0 0 0 .757.97l1.292.323-.685 1.142a1 1 0 0 0 .151 1.222l2.828 2.828a1 1 0 0 0 1.222.151l1.142-.685.323 1.292a1 1 0 0 0 .97.757h2.6a11.951 11.951 0 0 1 -2.155 4.383 1 1 0 0 0 .785 1.617zm-21 6a2 2 0 1 1 2 2 2 2 0 0 1 -2-2zm27-20.781-1.844.461a1 1 0 0 0 -.615 1.485l.978 1.63-1.719 1.724-1.63-.978a1 1 0 0 0 -1.485.615l-.466 1.844h-2.438l-.461-1.844a1 1 0 0 0 -1.485-.615l-1.63.978-1.724-1.719.978-1.63a1 1 0 0 0 -.615-1.485l-1.844-.466v-2.438l1.844-.461a1 1 0 0 0 .615-1.485l-.978-1.63 1.724-1.724 1.63.978a1 1 0 0 0 1.485-.615l.461-1.844h2.438l.461 1.844a1 1 0 0 0 1.485.615l1.63-.978 1.724 1.724-.978 1.63a1 1 0 0 0 .615 1.485l1.844.461z"/><path d="m52 28a4 4 0 1 0 4 4 4 4 0 0 0 -4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1 -2 2z"/><path d="m34 11h2v2h-2z"/><path d="m44 46h2v2h-2z"/><path d="m8 56h2v2h-2z"/></g></svg>
+                                 Magento 2 Migration
+                             </a>
                         </li>
-                            <li>
-                                <a>
-                                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px " height="28" width="28" 
+                        <li>
+                            <a>
+                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px " height="28" width="28" 
                                         	 viewBox="0 0 480.131 480.131" style="enable-background:new 0 0 480.131 480.131;" xml:space="preserve">
                                         <g>
                                         	<g>
@@ -87,9 +87,11 @@
                                         			c8.837,0,16,7.163,16,16s-7.163,16-16,16s-16-7.163-16-16S231.215,304.007,240.051,304.007z"/>
                                         	</g>
                                         
-                                    </svg>
-
-                                    Magento Perfomance Optimization</a></li>
+                                </svg>
+                            
+                                Magento Perfomance Optimization
+                            </a>
+                        </li>
                         </ul>
                     </div>
                     </li>
@@ -205,9 +207,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="photo">
                 <img src="img/_src/Review foto.svg">
-                <input class="work" type="submit" name="work" value="work with our team">
             </div>
+            <div class="button">
+                <input class="send" type="submit" name="work" value="work with our team">
+            </div>
+            <div class="dots">
+                <!-- <img src="img/_src/Dots.svg"> -->
+            </div>
+        </div>
         </div>
     </div>
     <script src="js/scripts.min.js"></script>
