--- a/Index.html
+++ b/Index.html
@@ -119,13 +119,75 @@
                 </div>
                 <div class="main-screen__stat">
                     <p>Magento 1 support end in:</p>
-                    <div class="counter">
-                        <div class="time"><span class="counter__days"   >64</span><p>days   </p></div>
-                        <div class="time"><span class="counter__hours"  >64</span><p>hours  </p></div>
-                        <div class="time"><span class="counter__minutes">64</span><p>minutes</p></div>
-                        <div class="time"><span class="counter__seconds">64</span><p>seconds</p></div>
+                    <div class="bloc">
+                    <div class="circular-timer" data-date="2020-06-05 00:00:00">
+                        <div class="circular-timer__item days">
+                            <span class="circular-timer-data">
+                                <span class="value">0</span>
+                                <span class="text">days</span>
+                            </span>
+                            <svg width="124" height="124" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M124 62C124 96.2417 96.2417 124 62 124C27.7583 124 0 96.2417 0 62C0 27.7583 27.7583 0 62 0C96.2417 0 124 27.7583 124 62ZM6.2 62C6.2 92.8175 31.1825 117.8 62 117.8C92.8175 117.8 117.8 92.8175 117.8 62C117.8 31.1825 92.8175 6.2 62 6.2C31.1825 6.2 6.2 31.1825 6.2 62Z" fill="#F2F5FC"/>
+                                <circle class="progress" cx="62" cy="62" r="59" stroke-width="6" stroke="url(#paint0_linear)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear" x1="0" y1="124" x2="-5.74745e-06" y2="-7.63077" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF1C8C"/>
+                                        <stop offset="1" stop-color="#FFE6D4"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
+                        <div class="circular-timer__item hours">
+                            <span class="circular-timer-data">
+                                <span class="value">0</span>
+                                <span class="text">hours</span>
+                            </span>
+                            <svg width="124" height="124" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M124 62C124 96.2417 96.2417 124 62 124C27.7583 124 0 96.2417 0 62C0 27.7583 27.7583 0 62 0C96.2417 0 124 27.7583 124 62ZM6.2 62C6.2 92.8175 31.1825 117.8 62 117.8C92.8175 117.8 117.8 92.8175 117.8 62C117.8 31.1825 92.8175 6.2 62 6.2C31.1825 6.2 6.2 31.1825 6.2 62Z" fill="#F2F5FC"/>
+                                <circle class="progress" cx="62" cy="62" r="59" stroke-width="6" stroke="url(#paint0_linear)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear" x1="0" y1="124" x2="-5.74745e-06" y2="-7.63077" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF1C8C"/>
+                                        <stop offset="1" stop-color="#FFE6D4"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
+                        <div class="circular-timer__item minutes">
+                            <span class="circular-timer-data">
+                                <span class="value">0</span>
+                                <span class="text">minutes</span>
+                            </span>
+                            <svg width="124" height="124" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M124 62C124 96.2417 96.2417 124 62 124C27.7583 124 0 96.2417 0 62C0 27.7583 27.7583 0 62 0C96.2417 0 124 27.7583 124 62ZM6.2 62C6.2 92.8175 31.1825 117.8 62 117.8C92.8175 117.8 117.8 92.8175 117.8 62C117.8 31.1825 92.8175 6.2 62 6.2C31.1825 6.2 6.2 31.1825 6.2 62Z" fill="#F2F5FC"/>
+                                <circle class="progress" cx="62" cy="62" r="59" stroke-width="6" stroke="url(#paint0_linear)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear" x1="0" y1="124" x2="-5.74745e-06" y2="-7.63077" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF1C8C"/>
+                                        <stop offset="1" stop-color="#FFE6D4"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
+                        <div class="circular-timer__item seconds">
+                            <span class="circular-timer-data">
+                                <span class="value">0</span>
+                                <span class="text">seconds</span>
+                            </span>
+                            <svg width="124" height="124" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M124 62C124 96.2417 96.2417 124 62 124C27.7583 124 0 96.2417 0 62C0 27.7583 27.7583 0 62 0C96.2417 0 124 27.7583 124 62ZM6.2 62C6.2 92.8175 31.1825 117.8 62 117.8C92.8175 117.8 117.8 92.8175 117.8 62C117.8 31.1825 92.8175 6.2 62 6.2C31.1825 6.2 6.2 31.1825 6.2 62Z" fill="#F2F5FC"/>
+                                <circle class="progress" cx="62" cy="62" r="59" stroke-width="6" stroke="url(#paint0_linear)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear" x1="0" y1="124" x2="-5.74745e-06" y2="-7.63077" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FF1C8C"/>
+                                        <stop offset="1" stop-color="#FFE6D4"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </div>
                     </div>
                 </div>
+            </div>
             </div>
             <form class="main-screen__form">
                 <img  class="rocket" src="img/_src/icons rockets.png" height="52px" width="52px">
